Lesson 6 assignment
