# project2/routes/recipe.js
@@ -2,13 +2,15 @@ const express = require('express')
 const router = express.Router()
 //require index controller
 const controller = require("../controllers/recipe")
+//validation
+const { validateRequest, recipeValidation, recipeRouteValidation } = require("../middleware/validations/recipe")
 
 //resolving route with controller method 
 router.get('/', controller.getAll)
-router.get('/:recipeId', controller.getById)
-router.post('/', controller.createRecipe)
-//  router.put('/:contactId', controller.updateContact)
-router.delete('/:recipeId', controller.deleteById)
+router.get('/:recipeId',recipeRouteValidation, validateRequest, controller.getById)
+router.post('/', recipeValidation, validateRequest, controller.createRecipe)
+router.put('/:recipeId', [recipeRouteValidation,recipeValidation], validateRequest, controller.updateRecipe)
+router.delete('/:recipeId', recipeRouteValidation, validateRequest, controller.deleteById)
 
 
 module.exports = router
